RESOLVED FIXED261589
Use more smart pointers in the HTML parsing code
https://bugs.webkit.org/show_bug.cgi?id=261589
Summary Use more smart pointers in the HTML parsing code
Chris Dumez
Reported 2023-09-14 20:23:00 PDT
Use more smart pointers in the HTML parsing code.
Attachments
Chris Dumez
Comment 1 2023-09-14 20:25:01 PDT
EWS
Comment 2 2023-09-21 16:08:41 PDT
Committed 268278@main (49c1df2a9309): <https://commits.webkit.org/268278@main> Reviewed commits have been landed. Closing PR #17801 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2023-09-21 16:09:17 PDT
Fujii Hironori
Comment 4 2023-11-15 19:37:57 PST
It regressed. Bug 264382 – WTFCrash in ~CanMakeCheckedPtrBase of ~EventTarget
Note You need to log in before you can comment on or make changes to this bug.